[package]
name = "pylon-tg-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env"] }
confy = "1.0.0"
chrono = "0.4.42"
dotenvy = "0.15.7"
eyre = "0.6.12"
notify = "8.2.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.225"
serde_json = "1.0.145"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
